@@ -1,2 +1,2 @@
-Hannes Loeffler <hannes@hloeffler.info>
+Hannes Loeffler <hannes.loeffler@gmail.com>
 based on code by Kazuhiko Shiozaki <kazuhiko@ring.gr.jp>
